--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,7 @@
 <body>
 
 <h3>Who Am I?</h3>
-<img src="bird.jpg" alt="Bird">
+<img src="images/bird.jpg" alt="Bird">
 <h3>I'm an adventurer</h3>
 
 </body>
